--- a/capstone1/package.json
+++ b/capstone1/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
-    "node-sass-middleware": "0.11.0"
+    "node-sass-middleware": "0.11.0",
+    "python-shell": "^1.0.8"
   }
 }
